# oxpecker-guard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: reference_machine.md
docs/: codebase_tour.md
examples/: README.md
examples/ex01_schema_validation/: README.md  catalog.py  config.py  config.toml  example_session.txt  graph.py  guards.py  handlers.py  run_demo.py
examples/ex04a_tool_allowlist/: README.md  config.py  config.toml  example_session.txt  graph.py  handlers.py  run_demo.py  tools.py
examples/ex06_name_protection/: README.md  config.py  config.toml  example_session.txt  graph.py  guards.py  handlers.py  run_demo.py
examples/ex06_name_protection/data/: case_filing.txt  protected_names.txt
opg/: __init__.py
opg/core/: audit.py  checkpoint.py  config.py  graph.py  model_client.py  orchestrator.py  state.py
opg/guards/: __init__.py  iteration_cap.py  tool_call_cap.py
tests/examples/: test_ex01.py  test_ex04a.py  test_ex06.py
tests/integration/: test_gate_node.py  test_graph_builder.py  test_orchestrator.py
tests/unit/: test_audit.py  test_checkpoint.py  test_config.py  test_guards.py  test_state.py
